# flight-risk-and-routing-engine

./: .gitignore  file_structure.md  pyproject.toml  requirements.txt  structure.md
config/: config.yaml  schema.yaml
src/etl/: __init__.py  airports.py  clean.py  date_encoding.py  flight_extract.py  flight_schema_validation.py  index_categories.py  join.py  scale.py  transform.py  weather.py
src/etl/flight/: __init__.py  clean.py  extract.py  schema_validation.py  transform.py
src/etl/weather/: __init__.py  clean.py  extract.py  transform.py
src/pipelines/: pipeline.py
src/utils/: __init__.py  constants.py  helper.py  loaders.py  logger.py
tests/: .cache.sqlite  __init__.py  etl_pipeline.py  test_etl.py
